VZDEV/src/objects/CCPM_CartType__c.object
<CustomObject>
    <description>To store Cart Types Records</description>
    <fields>
        <fullName>CCPM_CartTypeMapping__c</fullName>
        <label>Cart Type Mapping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AAL</fullName>
                </value>
                <value>
                    <fullName>EUP</fullName>
                </value>
                <value>
                    <fullName>ACC</fullName>
                </value>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_CartType__c</fullName>
        <description>Cart Type for the Lead record</description>
        <label>Cart Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_CommissionEligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commission Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_ESNCode__c</fullName>
        <description>This Field captures the ESN codes associated with the Cart Type Object.</description>
        <inlineHelpText>This Field captures the ESN codes associated with the Cart Type Object.</inlineHelpText>
        <label>ESN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cart Types</relationshipLabel>
        <relationshipName>CCPM_CartLineItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cart Type</label>
    <nameField>
        <label>Cart Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cart Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>